<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uPi</string>
    <string name="action_log_out">Log out</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_open_pdf">OpenPdf</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_enable_bluetooth">Enable Bluetooth</string>
    <string name="action_disable_bluetooth">Disable Bluetooth</string>
    <string name="action_enable_bluetooth_visibility">Enable Bluetooth visibility</string>
    <string name="action_open_attendance">Open attendance</string>
    <string name="action_set_attendance">Set attendance</string>
    <string name="action_start_stream">Start Stream</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_dialog_select_subject">Select a subject</string>
    <string name="title_activity_pruebas">Pruebas</string>
    <string name="title_activity_stream">StreamActivity</string>

</resources>
